--- a/src/components/TaskEditor.css
+++ b/src/components/TaskEditor.css
@@ -5,8 +5,8 @@
     width: 20rem;
     display: flex;
     flex-direction: column;
-    gap: 1.2rem;
-    box-shadow: 0 0.2rem 0.4rem #0000001a;
+    gap: 1rem;
+    box-shadow: 0 0.2rem 0.4rem #00000033;
   }
   
   .form-group {
@@ -54,6 +54,26 @@
     border: 1px solid #ddd;
     background: #fff;
   }
+
+  .error-message {
+    color: red;
+    font-size: 0.875rem;
+    height: 1.25rem;
+  }
+  
+  .form-group textarea,
+  .form-inline input,
+  .form-inline select {
+    width: 100%;
+    box-sizing: border-box;
+  }
+  
+  /* .form-group,
+  .form-inline {
+    display: flex;
+    flex-direction: column;
+  } */
+  
   
   .footer-buttons {
     display: flex;
@@ -82,7 +102,7 @@
   
   .save {
     background: #448fff;
-    padding: 0.8rem 1.2rem;
+    padding: 0.8rem 1.5rem;
     border: none;
     border-radius: 0.5rem;
     font-weight: 500;
