--- a/src/components/TaskView.css
+++ b/src/components/TaskView.css
@@ -1,64 +1,130 @@
 .task-view {
-    /* padding: 1rem; */
-    display: flex;
-    flex-direction: column;
-    align-items: top;
-    width: 100%;
-    max-width: 35rem;
-  }
-  
-  .task-view-header {
-    display: flex;
-    align-items: center;
-    font-size: 1.8rem;
-    font-weight: bold;
-  }
-  
-  .task-count {
-    background-color: #f5f5f5;
-    padding: 0.4rem 0.8rem;
-    font-size: 1rem;
-  }
-  
-  .add-task {
-    padding: 0.8rem;
-    background-color: #f9f9f9;
-    width: 60%;
-    border-radius: 8px;
-    font-size: 1rem;
-    color: #666;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    border: 1px solid #eee;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: top;
+  width: 100%;
+  max-width: 35rem;
+}
 
-  .add-task:hover {
-    background-color: #f0f0f0;
-  }
-  
-  
-  .task-item {
-    display: flex;
-    align-items: center;
-    padding: 0.5rem 0;
-    border-bottom: 0.1rem solid #eee;
-    font-size: 1rem;
-    justify-content: space-between;
-    position: relative;
-    width: 113%;
-    top: 10%;
-    right: 5%;
-  }
-  
-  .task-item:hover {
-    background-color: #f5f5f5;
-    cursor: pointer;
-  }
+.task-view-header {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
 
-  .arrow {
-    color: #aaa;
-    font-size: 1.5rem;
-    padding-right: 1rem;
-  }
-  
+.task-date {
+  display: flex;
+  align-items: center;
+}
+
+.task-count {
+  background-color: #f5f5f5;
+  padding: 1rem 0.5rem;
+  height: 0.5rem;
+  width: 0.5rem;
+  font-size: 1rem;
+  padding-top: 0%;
+  position: relative;
+  top: 5%;
+  left: 2%;
+}
+
+.add-task {
+  padding: 0.8rem;
+  background-color: #f9f9f9;
+  width: 50%;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  color: #666;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  border: 1px solid #eee;
+}
+
+.add-task:hover {
+  background-color: #f0f0f0;
+}
+
+.task-view-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #666666;
+}
+
+.task-button {
+  cursor: pointer;
+}
+
+.task-button:hover {
+  color: #989898;
+}
+
+.task-button:active {
+  color: #666666;
+}
+
+.task-button.selected {
+  color: #666666;
+  font-weight: bold;
+}
+
+
+.task-item {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 0;
+  border-bottom: 0.1rem solid #eee;
+  font-size: 1rem;
+  justify-content: space-between; 
+  position: relative;
+  width: 113%;
+  top: 10%;
+  right: 5%;
+}
+
+.task-item:hover {
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
+.arrow {
+  color: #aaa;
+  font-size: 1.5rem;
+  padding-right: 1rem;
+}
+
+.task-name span {
+  position: relative;
+  left: 1rem;
+  align-items: center;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+    width: 8rem;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 0.4rem;
+    padding: 0.3rem;
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: -3.5rem; 
+    opacity: 0;
+    transition: opacity 0.3s;
+    font-size: 0.7rem;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
